adjusting next and previous arrows , carousel sliders and responsiveness and adjusting the background image in the hero section

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
     <!-- Hero sECTION start -->
 
     <section class="hero-section">
-      <div class="container">
-        <!-- <p class="h1 hero-caption">WALL FEATURES</p> -->
-      </div>
+      <div class="container"></div>
     </section>
 
     <!-- Hero sECTION end -->
