--- a/pages/sculptures.html
+++ b/pages/sculptures.html
@@ -170,82 +170,76 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>SCULPTURES</h2>
+            </div>
+          </div>
           <img
             src="../images/sculptures/51.JPG"
             class="d-block"
             alt="sculptures-image-1"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SCULPTURES</h2>
             </div>
-            <div class="caption">1 / 6</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sculptures/9.jpg"
             class="d-block"
             alt="sculptures-image-2"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SCULPTURES</h2>
             </div>
-            <div class="caption">2 / 6</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sculptures/image00008.jpg"
             class="d-block"
             alt="sculptures-image-3"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SCULPTURES</h2>
             </div>
-            <div class="caption">3 / 6</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sculptures/image00011.jpg"
             class="d-block"
             alt="sinks-image-4"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SCULPTURES</h2>
             </div>
-            <div class="caption">4 / 6</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sculptures/image00012.jpg"
             class="d-block"
             alt="sculptures-image-5"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SCULPTURES</h2>
             </div>
-            <div class="caption">5 / 6</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sculptures/image00013.jpg"
             class="d-block"
             alt="sculptures-image-6"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>SCULPTURES</h2>
-            </div>
-            <div class="caption">6 / 6</div>
-          </div>
         </div>
       </div>
       <button
@@ -254,7 +248,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev"
       >
-        <span class="fa-solid fa-arrow-left-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-left text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Previous</span>
       </button>
@@ -264,7 +258,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="next"
       >
-        <span class="fa-solid fa-arrow-right-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-right text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Next</span>
       </button>
