--- a/pages/tables.html
+++ b/pages/tables.html
@@ -172,95 +172,88 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>TABLES</h2>
+            </div>
+          </div>
           <img
             src="../images/tables/23.jpg"
             class="d-block"
             alt="tables-image-1"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>TABLES</h2>
             </div>
-            <div class="caption">1 / 7</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/tables/27.jpg"
             class="d-block"
             alt="tables-image-2"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>TABLES</h2>
             </div>
-            <div class="caption">2 / 7</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/tables/28.jpg"
             class="d-block"
             alt="tables-image-3"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>TABLES</h2>
             </div>
-            <div class="caption">3 / 7</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/tables/image00001.jpg"
             class="d-block"
             alt="tables-image-4"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>TABLES</h2>
             </div>
-            <div class="caption">4 / 7</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/tables/image00004.jpg"
             class="d-block"
             alt="tables-image-5"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>TABLES</h2>
             </div>
-            <div class="caption">5 / 7</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/tables/image00007.jpg"
             class="d-block"
             alt="tables-image-6"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>TABLES</h2>
             </div>
-            <div class="caption">6 / 7</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/tables/image00014.jpg"
             class="d-block"
             alt="tables-image-7"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>TABLES</h2>
-            </div>
-            <div class="caption">7 / 7</div>
-          </div>
         </div>
       </div>
       <button
@@ -269,7 +262,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev"
       >
-        <span class="fa-solid fa-arrow-left-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-left text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Previous</span>
       </button>
@@ -279,7 +272,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="next"
       >
-        <span class="fa-solid fa-arrow-right-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-right text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Next</span>
       </button>
