--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,7 +36,6 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fa-solid fa-bars"></i>
         </button>
 
         <!-- Middle side -->
@@ -213,175 +212,162 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
+            </div>
+          </div>
           <img
             src="../images/projects/collezioni/image00001.jpeg"
             class="d-block"
             alt="projects-image-1"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">1 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00002.jpeg"
             class="d-block"
             alt="projects-image-2"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">2 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00003.jpeg"
             class="d-block"
             alt="projects-image-3"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">3 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00004.jpeg"
             class="d-block"
             alt="projects-image-4"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">4 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00005.jpeg"
             class="d-block"
             alt="projects-image-5"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">5 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00006.jpeg"
             class="d-block"
             alt="projects-image-6"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">6 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00009.jpeg"
             class="d-block"
             alt="projects-image-7"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">7 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00013.jpeg"
             class="d-block"
             alt="projects-image-8"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">8 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00015.jpeg"
             class="d-block"
             alt="projects-image-9"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">9 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00016.jpeg"
             class="d-block"
             alt="projects-image-10"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
             </div>
-            <div class="caption">10 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/collezioni/image00017.jpeg"
             class="d-block"
             alt="projects-image-11"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>PROJECTS - Downtown Mall - COLLEZIONI</h2>
-            </div>
-            <div class="caption">11 / 13</div>
-          </div>
         </div>
         <div class="carousel-item">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>PROJECTS - WESTIN</h2>
+              <h3>The Westin Cairo Golf Resort & Spa</h3>
+            </div>
+          </div>
           <img
             src="../images/projects/western/image00194.jpeg"
             class="d-block"
             alt="projects-image-12"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>PROJECTS - WESTIN</h2>
               <h3>The Westin Cairo Golf Resort & Spa</h3>
             </div>
-            <div class="caption">12 / 13</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/projects/western/image00195.jpeg"
             class="d-block"
             alt="projects-image-13"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>PROJECTS - WESTIN</h2>
-              <h3>The Westin Cairo Golf Resort & Spa</h3>
-            </div>
-            <div class="caption">12 / 13</div>
-          </div>
         </div>
       </div>
       <button
@@ -390,7 +376,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev"
       >
-        <span class="fa-solid fa-arrow-left-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-left text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Previous</span>
       </button>
@@ -400,7 +386,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="next"
       >
-        <span class="fa-solid fa-arrow-right-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-right text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Next</span>
       </button>
