--- a/pages/sinks.html
+++ b/pages/sinks.html
@@ -207,162 +207,151 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>SINKS</h2>
+            </div>
+          </div>
+
           <img
             src="../images/sinks/13.jpg"
             class="d-block"
             alt="sinks-image-1"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">1 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/39.jpg"
             class="d-block"
             alt="sinks-image-2"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">2 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/40.jpg"
             class="d-block"
             alt="sinks-image-3"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">3 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/41.jpg"
             class="d-block"
             alt="sinks-image-4"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>SINKS</h2>
-            </div>
-            <div class="caption">4 / 12</div>
-          </div>
         </div>
         <div class="carousel-item">
-          <img
-            src="../images/sinks/42.jpg"
-            class="d-block"
-            alt="sinks-image-5"
-          />
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>LOBBY</h2>
               <h3>Rosso Verona / Port Laurent / Marmo Calacatta</h3>
             </div>
-            <div class="caption">5 / 12</div>
           </div>
+          <img
+            src="../images/sinks/42.jpg"
+            class="d-block"
+            alt="sinks-image-5"
+          />
         </div>
         <div class="carousel-item">
-          <img
-            src="../images/sinks/58.jpg"
-            class="d-block"
-            alt="sinks-image-6"
-          />
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
               <h3>Rosso Verona / Port Laurent / Marmo Calacatta</h3>
             </div>
-            <div class="caption">6 / 12</div>
           </div>
+          <img
+            src="../images/sinks/58.jpg"
+            class="d-block"
+            alt="sinks-image-6"
+          />
         </div>
         <div class="carousel-item">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>SINKS</h2>
+            </div>
+          </div>
           <img
             src="../images/sinks/61.jpg"
             class="d-block"
             alt="sinks-image-7"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">7 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/66.jpg"
             class="d-block"
             alt="sinks-image-8"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">8 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/77.jpg"
             class="d-block"
             alt="bespoke-image-9"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">9 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/78.jpg"
             class="d-block"
             alt="sinks-image-10"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">10 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/image00009.jpg"
             class="d-block"
             alt="sinks-image-11"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
             </div>
-            <div class="caption">11 / 12</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/sinks/image00010.jpg"
             class="d-block"
             alt="sinks-image-12"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>SINKS</h2>
-            </div>
-            <div class="caption">12 / 12</div>
-          </div>
         </div>
       </div>
       <button
@@ -371,7 +360,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev"
       >
-        <span class="fa-solid fa-arrow-left-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-left text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Previous</span>
       </button>
@@ -381,7 +370,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="next"
       >
-        <span class="fa-solid fa-arrow-right-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-right text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Next</span>
       </button>
