--- a/pages/wall-features.html
+++ b/pages/wall-features.html
@@ -155,56 +155,53 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <div class="carousel-item-text">
+            <div class="carousel-item-title">
+              <h2>WALL FEATURES</h2>
+            </div>
+          </div>
           <img
             src="../images/wall-features/image00002.jpg"
             class="d-block"
             alt="wall-features-image-1"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>WALL FEATURES</h2>
             </div>
-            <div class="caption">1 / 4</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/wall-features/image00003.jpg"
             class="d-block"
             alt="wall-features-image-2"
           />
+        </div>
+        <div class="carousel-item">
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>WALL FEATURES</h2>
             </div>
-            <div class="caption">2 / 4</div>
           </div>
-        </div>
-        <div class="carousel-item">
           <img
             src="../images/wall-features/image00005.jpg"
             class="d-block"
             alt="wall-features-image-3"
           />
-          <div class="carousel-item-text">
-            <div class="carousel-item-title">
-              <h2>WALL FEATURES</h2>
-            </div>
-            <div class="caption">3 / 4</div>
-          </div>
         </div>
         <div class="carousel-item">
-          <img
-            src="../images/wall-features/image00006.jpg"
-            class="d-block"
-            alt="wall-features-image-4"
-          />
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>WALL FEATURES</h2>
             </div>
             <div class="caption">4 / 4</div>
           </div>
+          <img
+            src="../images/wall-features/image00006.jpg"
+            class="d-block"
+            alt="wall-features-image-4"
+          />
         </div>
       </div>
       <button
@@ -213,7 +210,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="prev"
       >
-        <span class="fa-solid fa-arrow-left-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-left text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Previous</span>
       </button>
@@ -223,7 +220,7 @@
         data-bs-target="#carouselExampleIndicators"
         data-bs-slide="next"
       >
-        <span class="fa-solid fa-arrow-right-long text-dark" aria-hidden="true">
+        <span class="fa-solid fa-chevron-right text-dark" aria-hidden="true">
         </span>
         <span class="visually-hidden">Next</span>
       </button>
