adjusting the about page and putting the background-overlay over the background and adjusting the font-family to roboto in all pages

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -132,6 +132,7 @@
           <div class="about-us-caption">
             <p class="h2">ABOUT US</p>
           </div>
+          <div class="about-us-bg-overlay"></div>
         </div>
       </div>
       <div class="about-us-right-half">
