bashmohandesah-habeeba-adjustments

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fa-solid fa-bars"></i>
         </button>
 
         <!-- Middle side -->
@@ -111,7 +110,7 @@
               <a
                 class="nav-link navbar-anchor"
                 aria-current="page"
-                href="./pages/contacts.html"
+                href="#hero-contact-us"
                 >CONTACT US</a
               >
             </li>
@@ -128,129 +127,34 @@
     </section>
 
     <!-- Hero sECTION end -->
-
-    <!-- Geometrical/ sinks Section Start -->
-
-    <section class="geometrical py-5">
+    <!-- contact us start -->
+    <section class="contact-us" id="hero-contact-us">
       <div class="container">
-        <div class="row my-flex-order">
-          <div class="col-md-6">
-            <div class="geometrical-left-side">
-              <a href="./pages/sinks.html">
-                <h2 class="text-center">SINKS</h2>
-              </a>
+        <div class="row">
+          <div class="col-md-3 col-sm-6 mb-5">
+            <div class="icon-holder">
+              <i class="fa-brands fa-facebook-f text-dark fs-4"></i>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="geometrical-right-side">
-              <a href="./pages/sinks.html">
-                <img
-                  class="w-100 d-block"
-                  src="./images/sinks/13.jpg"
-                  alt="sinks-image"
-                />
-              </a>
+          <div class="col-md-3 col-sm-6 mb-5">
+            <div class="icon-holder">
+              <i class="fa-brands fa-instagram text-dark fs-4"></i>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 mb-5">
+            <div class="icon-holder">
+              <i class="fa-brands fa-twitter text-dark fs-4"></i>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="icon-holder">
+              <i class="fa-solid fa-truck-fast text-dark fs-4"></i>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Geometrical Section End -->
-
-    <!-- Jewels / sculptures Section Start -->
-
-    <section class="jewels py-5">
-      <div class="container">
-        <div class="row my-flex-order-2">
-          <div class="col-md-6">
-            <div class="jewels-left-side">
-              <a href="./pages/sculptures.html">
-                <img
-                  class="w-100 d-block"
-                  src="./images/sculptures/image00008.jpg"
-                  alt="sculpture-image"
-                />
-              </a>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="jewels-right-side">
-              <a href="./pages/sculptures.html">
-                <h2 class="text-center">SCULPTURES</h2>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Jewels / Sculptures Section End -->
-
-    <!-- Narural / Tables Section Start -->
-
-    <section class="natural py-5">
-      <div class="container">
-        <div class="row my-flex-order">
-          <div class="col-md-6">
-            <div class="natural-left-side">
-              <a href="./pages/tables.html">
-                <h2 class="text-center">TABLES</h2>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="natural-right-side">
-              <a href="./pages/tables.html">
-                <img
-                  class="w-100 d-block"
-                  src="./images/tables/28.jpg"
-                  alt="tables-image"
-                />
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Narural /Tables Section End -->
-
-    <!-- Oriental / wall features Section Start -->
-
-    <section class="oriental py-5">
-      <div class="container">
-        <div class="row my-flex-order-2">
-          <div class="col-md-6">
-            <div class="oriental-left-side">
-              <a href="./pages/wall-features.html">
-                <img
-                  class="w-100 d-block"
-                  src="./images/wall-features/image00005.jpg"
-                  alt="wall-features-image"
-                />
-              </a>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="oriental-right-side">
-              <a href="./pages/wall-features.html">
-                <h2 class="text-center">WALL FEATURES</h2>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Oriental / wall features Section End -->
-
-    <!-- =============================================================== -->
-    <!-- new content edit end -->
-    <!-- =============================================================== -->
-
+    <!-- contact us end -->
     <!-- Fontawesome js-->
     <script src="js/all.min.js"></script>
     <!-- Js Bootstrap -->
