--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -40,7 +40,6 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fa-solid fa-bars"></i>
         </button>
 
         <div
@@ -114,7 +113,7 @@
               <a
                 class="nav-link navbar-anchor"
                 aria-current="page"
-                href="./contacts.html"
+                href="../pages/../index.html"
                 >CONTACT US
               </a>
             </li>
@@ -127,149 +126,128 @@
     <!-- About Us Image and Text start-->
 
     <section class="about-us">
-      <div class="about-us-left-half">
-        <div class="about-us-bg-image">
-          <div class="about-us-caption">
-            <p class="h2">ABOUT US</p>
-          </div>
-          <div class="about-us-bg-overlay"></div>
-        </div>
-      </div>
-      <div class="about-us-right-half">
-        <div class="about-us-right-half-caption">
-          <h2 class="mt-5 fw-bolder fs-1">
-            WE <br />
-            CREATE <br />
-            ART <br />
-            FROM <br />
-            STONE
-          </h2>
-          <p>
-            Founded in 1984, <strong> Stone Tech </strong> has <br />
-            been at the forefont of developments <br />
-            in a natural stone , granite and cement <br />
-            products offering a wide selection of <br />
-            uniquely designed pieces and <br />
-            premium quality stones.
-          </p>
-          <p>
-            Over the years, we have taken on a <br />
-            veritable range of different projects <br />
-            from private to commercial ones along <br />
-            with recently delving into product <br />
-            design creating unique and head <br />
-            turning pieces.
-          </p>
-          <p>
-            At <strong>Stone Tech</strong> we thrive to deliver <br />
-            the finest quality through our skilled <br />
-            craftsmanship, advanced technology <br />
-            and experience gathered over <br />
-            decades
-          </p>
+      <div class="about-us-bg-image">
+        <div class="about-us-bg-overlay">
           <div class="container">
-            <div class="row">
-              <div class="col-md-12 mt-3">
-                <h2 class="h1">ST</h2>
-
-                <p class="h3">
-                  FIND US <br />
-                  AT HALL 2
+            <div class="about-us-caption">
+              <div class="about-us-right-half-caption">
+                <h2 class="fw-bolder fs-1">
+                  WE <br />
+                  CREATE <br />
+                  ART <br />
+                  FROM <br />
+                  STONE.
+                </h2>
+                <p>
+                  Founded in 1984, <strong> Stone Tech </strong> has <br />
+                  been at the forefont of developments <br />
+                  in a natural stone , granite and cement products offering a
+                  wide selection of uniquely designed pieces and premium quality
+                  stones. Over the years, we have taken on a veritable range of
+                  different projects from private to commercial ones along with
+                  recently delving into product design creating unique and head
+                  turning pieces. At <strong>Stone Tech</strong> we thrive to
+                  deliver <br />
+                  the finest quality through our skilled <br />
+                  craftsmanship, advanced technology <br />
+                  and experience gathered over <br />
+                  decades.
                 </p>
-                <p class="h3 mt-5">Contact Us</p>
+
+                <!-- <p class="h3 mt-5">Contact Us</p> -->
                 <!-- social media icons and contacts -->
-                <ul class="ps-0">
-                  <!-- instagram -->
-                  <li
-                    class="list-unstyled d-flex justify-content-start align-items-center"
+                <!-- <ul class="ps-0">
+                <-- instagram -->
+                <!-- <li
+                  class="list-unstyled d-flex justify-content-start align-items-center"
+                >
+                  <div
+                    class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
                   >
-                    <div
-                      class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
-                    >
-                      <i class="fa-brands fa-instagram text-white"></i>
-                    </div>
-                    <a
-                      class="text-decoration-none ms-3 text-dark fw-semibold"
-                      href="#"
-                      >stonetecheg</a
-                    >
-                  </li>
-                  <!-- facebook -->
-                  <li
-                    class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                    <i class="fa-brands fa-instagram text-white"></i>
+                  </div>
+                  <a
+                    class="text-decoration-none ms-3 text-dark fw-semibold"
+                    href="#"
+                    >stonetecheg</a
                   >
-                    <div
-                      class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
-                    >
-                      <i class="fa-brands fa-facebook-f text-white"></i>
-                    </div>
-                    <a
-                      class="text-decoration-none ms-3 text-dark fw-semibold"
-                      href="#"
-                      >Stone Tech Egypt</a
-                    >
-                  </li>
-                  <!-- website -->
-                  <li
-                    class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                </li> -->
+                <!-- facebook -->
+                <!-- <li
+                  class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                >
+                  <div
+                    class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
                   >
-                    <div
-                      class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
-                    >
-                      <i class="fa-solid fa-globe text-white"></i>
-                    </div>
-                    <a
-                      class="text-decoration-none ms-3 text-dark fw-semibold"
-                      href="#"
-                      >www.stonetech-eg.com</a
-                    >
-                  </li>
-                  <!-- message us -->
-                  <li
-                    class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                    <i class="fa-brands fa-facebook-f text-white"></i>
+                  </div>
+                  <a
+                    class="text-decoration-none ms-3 text-dark fw-semibold"
+                    href="#"
+                    >Stone Tech Egypt</a
                   >
-                    <div
-                      class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
-                    >
-                      <i class="fa-regular fa-envelope text-white"></i>
-                    </div>
-                    <a
-                      class="text-decoration-none ms-3 text-dark fw-semibold"
-                      href="#"
-                      >info@stonetech-eg.com</a
-                    >
-                  </li>
-                  <!-- call us -->
-                  <li
-                    class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                </li> -->
+                <!-- website -->
+                <!-- <li
+                  class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                >
+                  <div
+                    class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
                   >
-                    <div
-                      class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
-                    >
-                      <i class="fa-solid fa-phone text-white"></i>
-                    </div>
-                    <a
-                      class="text-decoration-none ms-3 text-dark fw-semibold"
-                      href="#"
-                      >+201117774147</a
-                    >
-                  </li>
-                  <!-- location -->
-                  <li
-                    class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                    <i class="fa-solid fa-globe text-white"></i>
+                  </div>
+                  <a
+                    class="text-decoration-none ms-3 text-dark fw-semibold"
+                    href="#"
+                    >www.stonetech-eg.com</a
                   >
-                    <div
-                      class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
-                    >
-                      <i class="fa-solid fa-location-dot text-white"></i>
-                    </div>
-                    <a
-                      class="text-decoration-none ms-3 text-dark fw-semibold"
-                      href="#"
-                      >KM 10 Katameya - Maadi Road</a
-                    >
-                  </li>
-                </ul>
+                </li> -->
+                <!-- message us -->
+                <!-- <li
+                  class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                >
+                  <div
+                    class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
+                  >
+                    <i class="fa-regular fa-envelope text-white"></i>
+                  </div>
+                  <a
+                    class="text-decoration-none ms-3 text-dark fw-semibold"
+                    href="#"
+                    >info@stonetech-eg.com</a
+                  >
+                </li> -->
+                <!-- call us -->
+                <!-- <li
+                  class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                >
+                  <div
+                    class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
+                  >
+                    <i class="fa-solid fa-phone text-white"></i>
+                  </div>
+                  <a
+                    class="text-decoration-none ms-3 text-dark fw-semibold"
+                    href="#"
+                    >+201117774147</a
+                  >
+                </li> -->
+                <!-- location -->
+                <!-- <li
+                  class="list-unstyled d-flex justify-content-start align-items-center mt-3"
+                >
+                  <div
+                    class="icon-holder d-flex justify-content-center align-items-center bg-secondary rounded-circle"
+                  >
+                    <i class="fa-solid fa-location-dot text-white"></i>
+                  </div>
+                  <a
+                    class="text-decoration-none ms-3 text-dark fw-semibold"
+                    href="#"
+                    >KM 10 Katameya - Maadi Road</a
+                  >
+                </li> -->
+                <!-- </ul> -->
               </div>
             </div>
           </div>
