--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -108,7 +108,7 @@
               <a
                 class="nav-link navbar-anchor active"
                 aria-current="page"
-                href="./contacts.html"
+                href="../pages/index.html"
                 >CONTACT US</a
               >
             </li>
@@ -117,124 +117,6 @@
       </div>
     </nav>
     <!-- Navbar End -->
-
-    <!-- zaha hadid design untold Carousel and Text start-->
-
-    <section class="contacts-section-parent">
-      <div class="contacts-section-left-half">
-        <div class="contacts-section-bg-image">
-          <div class="contacts-section-caption">
-            <p class="h2">Contacts</p>
-          </div>
-        </div>
-      </div>
-      <div class="contacts-section-right-half">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <h2>Citco srl</h2>
-              <p>
-                Traversa Via del Commercio n. 1
-                <br />
-                37010 Rivoli Veronese (VR), Italy
-              </p>
-              <p>info@citco.it</p>
-              <p>
-                T. +39 045.6269118
-                <br />
-                F. +39 045.6260649
-              </p>
-              <p>P.I. IT05382530961</p>
-            </div>
-            <div class="col-md-6">
-              <h2>Citco Showroom Italia</h2>
-              <p>
-                Traversa Via del Commercio n. 1
-                <br />
-                37010 Rivoli Veronese (VR), Italy
-              </p>
-              <p>info@citco.it</p>
-              <p>
-                T. +39 045.6269118
-                <br />
-                F. +39 045.6260649
-              </p>
-              <p>P.I. IT05382530961</p>
-            </div>
-            <div class="col-md-6 mt-5">
-              <h2>Citco Showroom Miami</h2>
-              <p>
-                Citco USA Corp. LTD
-                <br />
-                3801 NE Miami Court
-              </p>
-              <p>T. +001 786 5427443</p>
-            </div>
-            <div class="col-md-6 mt-5">
-              <h2>USA Citco Showroom and Warehouse</h2>
-              <p>
-                2750 NW 84th Ave Suite 2
-                <br />
-                DORAL MIAMI FL 33122
-              </p>
-              <p>P +1 3053920221</p>
-            </div>
-            <div class="col-md-12 py-5">
-              <form>
-                <div class="mb-3">
-                  <input
-                    type="firstname"
-                    class="form-control form-control-lg"
-                    id="exampleFormControlInput1"
-                    placeholder="FIRST AND LAST NAME"
-                  />
-                </div>
-                <div class="mb-3">
-                  <input
-                    type="email"
-                    class="form-control form-control-lg"
-                    id="exampleFormControlInput2"
-                    placeholder="EMAIL ADDRESS"
-                  />
-                </div>
-                <div class="mb-3">
-                  <textarea
-                    class="form-control form-control-lg"
-                    id="exampleFormControlTextarea1"
-                    rows="3"
-                    placeholder="MESSAGE"
-                  ></textarea>
-                </div>
-                <div class="data-holder mt-3">
-                  <div class="form-check">
-                    <input
-                      class="form-check-input checkbox-input"
-                      type="checkbox"
-                      value=""
-                      id="flexCheckDefault"
-                    />
-                    <label class="form-check-label" for="flexCheckDefault">
-                      <span>
-                        Accept the
-                        <a class="text-black" href="#">Privacy Policy</a>
-                      </span>
-                    </label>
-                  </div>
-                  <button
-                    type="button"
-                    class="btn btn-primary btn-lg submit-btn"
-                  >
-                    Large button
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- zaha hadid design untold Carousel and Text end-->
 
     <!-- Fontawesome js-->
     <script src="../js/all.min.js"></script>
