--- a/pages/projects.html
+++ b/pages/projects.html
@@ -112,7 +112,7 @@
               <a
                 class="nav-link navbar-anchor"
                 aria-current="page"
-                href="./contacts.html"
+                href="../pages/../index.html"
                 >CONTACT US</a
               >
             </li>
