--- a/pages/sculptures.html
+++ b/pages/sculptures.html
@@ -36,7 +36,6 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fa-solid fa-bars"></i>
         </button>
 
         <!-- Middle side -->
@@ -112,7 +111,7 @@
               <a
                 class="nav-link navbar-anchor"
                 aria-current="page"
-                href="../pages/contacts.html"
+                href="../pages/../index.html"
                 >CONTACT US</a
               >
             </li>
