--- a/pages/sinks.html
+++ b/pages/sinks.html
@@ -36,7 +36,6 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fa-solid fa-bars"></i>
         </button>
 
         <!-- Middle side -->
@@ -113,7 +112,7 @@
               <a
                 class="nav-link navbar-anchor"
                 aria-current="page"
-                href="./pages/contacts.html"
+                href="../pages/../index.html"
                 >CONTACT US</a
               >
             </li>
@@ -259,7 +258,6 @@
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>LOBBY</h2>
-              <h3>Rosso Verona / Port Laurent / Marmo Calacatta</h3>
             </div>
           </div>
           <img
@@ -272,7 +270,6 @@
           <div class="carousel-item-text">
             <div class="carousel-item-title">
               <h2>SINKS</h2>
-              <h3>Rosso Verona / Port Laurent / Marmo Calacatta</h3>
             </div>
           </div>
           <img
