--- a/pages/wall-features.html
+++ b/pages/wall-features.html
@@ -37,7 +37,6 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fa-solid fa-bars"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -109,7 +108,7 @@
               <a
                 class="nav-link navbar-anchor"
                 aria-current="page"
-                href="./contacts.html"
+                href="../pages/../index.html"
                 >CONTACT US</a
               >
             </li>
